--- a/serverless.yml
+++ b/serverless.yml
@@ -27,6 +27,7 @@ functions:
           path: todos
           method: post
           cors: true
+          authorizer: aws_iam
 
   list:
     handler: todos/list.list
@@ -35,6 +36,7 @@ functions:
           path: todos
           method: get
           cors: true
+          authorizer: aws_iam
 
   get:
     handler: todos/get.get
@@ -43,6 +45,7 @@ functions:
           path: todos/{id}
           method: get
           cors: true
+          authorizer: aws_iam
 
   update:
     handler: todos/update.update
@@ -51,6 +54,7 @@ functions:
           path: todos/{id}
           method: put
           cors: true
+          authorizer: aws_iam
 
   delete:
     handler: todos/delete.delete
@@ -59,6 +63,7 @@ functions:
           path: todos/{id}
           method: delete
           cors: true
+          authorizer: aws_iam
 
 resources:
   Resources:
