--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "stripe": "^8.150.0",
     "uuid": "^2.0.3"
+  },
+  "devDependencies": {
+    "serverless-dotenv-plugin": "^3.9.0"
   }
 }
