--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,6 @@
 service: serverless-rest-api-with-dynamodb
-
+plugins:
+  - serverless-dotenv-plugin
 frameworkVersion: ">=1.1.0 <2.50.0"
 
 provider:
@@ -8,6 +9,7 @@ provider:
   region: eu-west-1
   environment:
     DYNAMODB_TABLE: ${self:service}-${opt:stage, self:provider.stage}
+    STRIPE_SECRET_KEY: ${env:STRIPE_SECRET_KEY}
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -27,7 +29,8 @@ functions:
           path: todos
           method: post
           cors: true
-          authorizer: aws_iam
+          authorizer:
+            arn: arn:aws:cognito-idp:eu-west-1:941845565656:userpool/eu-west-1_nwGY0Rl7X
 
   list:
     handler: todos/list.list
@@ -36,7 +39,8 @@ functions:
           path: todos
           method: get
           cors: true
-          authorizer: aws_iam
+          authorizer:
+            arn: arn:aws:cognito-idp:eu-west-1:941845565656:userpool/eu-west-1_nwGY0Rl7X
 
   get:
     handler: todos/get.get
@@ -45,7 +49,8 @@ functions:
           path: todos/{id}
           method: get
           cors: true
-          authorizer: aws_iam
+          authorizer:
+            arn: arn:aws:cognito-idp:eu-west-1:941845565656:userpool/eu-west-1_nwGY0Rl7X
 
   update:
     handler: todos/update.update
@@ -54,7 +59,8 @@ functions:
           path: todos/{id}
           method: put
           cors: true
-          authorizer: aws_iam
+          authorizer:
+            arn: arn:aws:cognito-idp:eu-west-1:941845565656:userpool/eu-west-1_nwGY0Rl7X
 
   delete:
     handler: todos/delete.delete
@@ -63,7 +69,17 @@ functions:
           path: todos/{id}
           method: delete
           cors: true
-          authorizer: aws_iam
+          authorizer:
+            arn: arn:aws:cognito-idp:eu-west-1:941845565656:userpool/eu-west-1_nwGY0Rl7X
+  billing:
+      handler: todos/billing.billing
+      events:
+        - http:
+            path: billing
+            method: post
+            cors: true
+            authorizer:
+              arn: arn:aws:cognito-idp:eu-west-1:941845565656:userpool/eu-west-1_nwGY0Rl7X
 
 resources:
   Resources:
