--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "jest": "^27.0.3",
-    "serverless-dotenv-plugin": "^3.9.0"
+    "serverless-dotenv-plugin": "^3.9.0",
+    "serverless-offline": "^7.0.0"
   }
 }
