--- a/serverless.yml
+++ b/serverless.yml
@@ -67,13 +67,13 @@ functions:
     handler: src/handler/deleteNote.handler
     events:
       - http:
-          path: todos/{id}/{userId}
+          path: todos/{id}
           method: delete
           cors: true
           authorizer:
             arn: arn:aws:cognito-idp:eu-west-1:941845565656:userpool/eu-west-1_nwGY0Rl7X
   billing:
-      handler: src/helper/billing.handler
+      handler: src/handler/billing.handler
       events:
         - http:
             path: billing
