--- a/serverless.yml
+++ b/serverless.yml
@@ -81,6 +81,15 @@ functions:
             cors: true
             authorizer:
               arn: arn:aws:cognito-idp:eu-west-1:941845565656:userpool/eu-west-1_nwGY0Rl7X
+  photo_upload:
+      handler: src/handler/photo_upload.handler
+      events:
+        - http:
+            path: photo_upload
+            method: post
+            cors: true
+            authorizer:
+              arn: arn:aws:cognito-idp:eu-west-1:941845565656:userpool/eu-west-1_nwGY0Rl7X
 
 resources:
   - ${file(resources/api-gateway-errors.yml)}
